--- a/index.html
+++ b/index.html
@@ -21,5 +21,23 @@
       </nav>
       <button type="button">Order Now</button>
     </header>
+    <main>
+      <!--Hero section-->
+      <section>
+        <h1>Enjoy Your Favorite Food From Anywhere</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+          varius enim in eros elementum tristique. Duis cursus, mi quis viverra
+          ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.
+        </p>
+        <button type="button">Order now</button>
+        <img
+          src="./imeges/hero-dish.jpg"
+          alt="fish and chips"
+          width="511"
+          height="511"
+        />
+      </section>
+    </main>
   </body>
 </html>
